--- a/app/src/main/res/layout/fragment_community_main.xml
+++ b/app/src/main/res/layout/fragment_community_main.xml
@@ -103,12 +103,14 @@
                         android:id="@+id/community_btn_cat"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
+
                         android:background="@android:color/transparent"
                         android:onClick="@{onClickListener::onClick}"
                         android:text="등록"
-                        android:textColor="#000"
+                        android:textColor="@color/white"
                         android:textSize="13sp"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="10dp"
                         app:layout_constraintStart_toEndOf="@id/community_search_img"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
