--- a/app/src/main/res/layout/activity_community_question.xml
+++ b/app/src/main/res/layout/activity_community_question.xml
@@ -17,24 +17,29 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fff"
+
         >
 
         <TextView
             android:id="@+id/question_text_titlebar"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginTop="25dp"
-            android:gravity="top|start"
+            style="@style/titlebarNoText"
             android:text="등록"
-            android:textColor="#000"
-            android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/question_text_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
 
             app:layout_constraintVertical_chainStyle="spread_inside"
+            />
+        <ImageView
+            android:id="@+id/question_img_back"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:onClick="@{onClickListener::onClick}"
+            android:padding="20dp"
+            android:src="@drawable/icons8_undo_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             />
 
         <EditText
