--- a/app/src/main/res/layout/activity_community_question_photo.xml
+++ b/app/src/main/res/layout/activity_community_question_photo.xml
@@ -17,19 +17,20 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fff"
+
         >
 
 
         <TextView
             android:id="@+id/question_photo_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_height="60dp"
+            android:background="@color/titleColor"
             android:gravity="center"
             android:text="사진을 정해주세요 (최대 4개)"
-            android:textColor="#000"
-            android:textSize="25sp"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,40 +39,53 @@
             />
 
         <ImageView
+            android:id="@+id/question_photo_img_back"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:onClick="@{onClickListener::onClick}"
+            android:padding="20dp"
+            android:src="@drawable/icons8_undo_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <ImageView
             android:id="@+id/question_photo_img1"
             android:layout_width="0dp"
             android:layout_height="100dp"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toTopOf="@id/question_photo_rv"
+            app:layout_constraintEnd_toStartOf="@id/question_photo_img2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/question_photo_title"
-            app:layout_constraintBottom_toTopOf="@id/question_photo_rv"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toStartOf="@id/question_photo_img2"
             />
+
         <ImageView
             android:id="@+id/question_photo_img2"
             android:layout_width="0dp"
             android:layout_height="100dp"
-            android:layout_marginTop="10dp"
-
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toStartOf="@id/question_photo_img3"
             app:layout_constraintStart_toEndOf="@id/question_photo_img1"
             app:layout_constraintTop_toBottomOf="@id/question_photo_title"
 
             />
+
         <ImageView
-            android:layout_marginTop="10dp"
             android:id="@+id/question_photo_img3"
             android:layout_width="0dp"
             android:layout_height="100dp"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toStartOf="@id/question_photo_img4"
             app:layout_constraintStart_toEndOf="@id/question_photo_img2"
             app:layout_constraintTop_toBottomOf="@id/question_photo_title"
             />
+
         <ImageView
-            android:layout_marginTop="10dp"
             android:id="@+id/question_photo_img4"
             android:layout_width="0dp"
             android:layout_height="100dp"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/question_photo_img3"
             app:layout_constraintTop_toBottomOf="@id/question_photo_title"
@@ -79,14 +93,14 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/survey_divder"
-            app:layout_goneMarginTop="2.5dp"
-            app:layout_constraintTop_toBottomOf="@id/question_photo_img1"
-            app:layout_constraintBottom_toTopOf="@id/question_photo_rv"
+            android:layout_height="10dp"
             android:layout_marginBottom="2.5dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/survey_divder"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/question_photo_rv"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/question_photo_img1"
+            app:layout_goneMarginTop="2.5dp"
             />
 
         <android.support.v7.widget.RecyclerView
@@ -94,16 +108,15 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/question_photo_img1"
+
             app:layout_constraintBottom_toTopOf="@+id/question_btn_floataction"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/question_photo_img1"
             app:layout_constraintVertical_weight="1"
             tools:listitem="@layout/item_question_photos"
             />
-
 
 
         <android.support.design.widget.FloatingActionButton
@@ -113,14 +126,14 @@
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="25dp"
             android:clipToPadding="false"
+            android:onClick="@{onClickListener::onClick}"
             app:backgroundTint="#85d3d3d3"
             app:borderWidth="0dp"
             app:elevation="0dp"
             app:fabSize="auto"
-            android:onClick="@{onClickListener::onClick}"
-            app:layout_constraintTop_toBottomOf="@id/question_photo_rv"
             app:layout_constraintBottom_toTopOf="@id/question_btn_register"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/question_photo_rv"
             app:layout_constraintVertical_weight="3"
             />
 
@@ -129,19 +142,18 @@
             android:id="@+id/question_btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:background="@drawable/btn_color_border"
             android:onClick="@{onClickListener::onClick}"
             android:text="등록"
             android:textColor="#fff"
-            android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             />
-
 
 
     </android.support.constraint.ConstraintLayout>
