--- a/app/src/main/res/layout/item_navi_question.xml
+++ b/app/src/main/res/layout/item_navi_question.xml
@@ -44,6 +44,9 @@
             android:padding="10dp"
             android:hint="제목을 입력해주세요"
             android:textColor="#000"
+            android:maxEms="9"
+            android:maxLength="9"
+            android:maxLines="1"
             android:textColorHint="#BFBFBF"
             android:background="@drawable/btn_grey_border"
             app:layout_constraintEnd_toEndOf="parent"
@@ -80,9 +83,9 @@
             android:background="@drawable/btn_grey_border"
             android:gravity="center_vertical"
             android:padding="10dp"
-            android:hint="한줄평 (최대 7자)"
-            android:maxEms="7"
-            android:maxLength="7"
+            android:hint="한줄평 (최대 10자)"
+            android:maxEms="10"
+            android:maxLength="10"
             android:maxLines="1"
             android:textColor="#000"
             android:textColorHint="#BFBFBF"
