--- a/app/src/main/res/layout/item_review_main.xml
+++ b/app/src/main/res/layout/item_review_main.xml
@@ -36,6 +36,7 @@
             android:text="@{model.title}"
             android:textColor="#000"
             android:textSize="11sp"
+            android:maxLines="1"
             app:layout_constraintEnd_toStartOf="@id/review_main_id_img"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -76,24 +77,6 @@
             android:layout_marginBottom="5dp"
             app:layout_constraintTop_toTopOf="parent"
             />
-
-        <!--<ImageView-->
-            <!--android:id="@+id/main_review_img"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:adjustViewBounds="true"-->
-            <!--app:reviewImageUrl="@{model.images}"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@id/review_main_text"-->
-            <!--android:layout_marginBottom="2dp"-->
-            <!--android:layout_marginEnd="3dp"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:layout_marginStart="3dp"-->
-
-            <!--tools:src="@drawable/test_10"-->
-            <!--/>-->
 
         <ImageView
             android:id="@+id/main_review_img"
