--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,9 +43,36 @@
         <item name="colorControlActivated">@color/black</item>
     </style>
 
-    <style name="ButtonRippleStyle" parent="Material.Drawable.Ripple.Wave.Light">
-        <item name="android:background">@null</item>
-        <item name="rd_rippleColor">@color/DarkGreen</item>
+    <!--<style name="ButtonRippleStyle" parent="Material.Drawable.Ripple.Wave.Light">-->
+        <!--<item name="android:background">@null</item>-->
+        <!--<item name="rd_rippleType">touch</item>-->
+        <!--<item name="rd_maxRippleRadius">25dp</item>-->
+        <!--<item name="rd_cornerRadius">5dp</item>-->
+        <!--<item name="rd_delayClick">untilRelease</item>-->
+        <!--<item name="rd_rippleAnimDuration">150</item>-->
+        <!--<item name="rd_rippleColor">@color/DarkGreenalpha</item>-->
+    <!--</style>-->
+
+    <style name="pictureTitlebar">
+
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/horizontal_title</item>
+        <item name="android:text">사진을 정해주세요</item>
+    </style>
+
+    <style name="titlebarNoText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/horizontal_title</item>
     </style>
 
 </resources>
