--- a/app/src/main/res/layout/item_bottom_layout.xml
+++ b/app/src/main/res/layout/item_bottom_layout.xml
@@ -24,6 +24,46 @@
         app:keyboardDetect="@{empty}"
 
         >
+        <TextView
+            android:id="@+id/bottom_layout_btn0"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:onClick="@{onClickListener::onClick}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/bottom_layout_btn1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/btn_ripple_colored"
+            >
+        </TextView>
+
+        <ImageView
+            android:id="@+id/bottom_layout_btn0_txt"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/icons8_home_24"
+            android:text="메인"
+            app:layout_constraintEnd_toStartOf="@id/bottom_layout_btn1_txt"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/bottom_layout_text0"
+            style="@style/text12Style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:text="홈"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/bottom_layout_btn1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bottom_layout_btn0_txt"
+            />
 
 
         <TextView
@@ -33,7 +73,7 @@
             android:onClick="@{onClickListener::onClick}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/bottom_layout_btn2"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/bottom_layout_btn0"
             app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/btn_ripple_colored"
             >
@@ -46,11 +86,10 @@
             android:layout_height="20dp"
             android:layout_marginTop="5dp"
             android:src="@drawable/icons8_home_24"
-            android:text="메인"
             app:layout_constraintEnd_toStartOf="@id/bottom_layout_btn2_txt"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/bottom_layout_btn0_txt"
             app:layout_constraintTop_toTopOf="parent"
             />
 
@@ -61,10 +100,10 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:text="메인"
+            android:text="리뷰"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/bottom_layout_btn2"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/bottom_layout_btn0"
             app:layout_constraintTop_toBottomOf="@id/bottom_layout_btn1_txt"
             />
 
