--- a/app/src/main/res/layout/activity_gallery_max.xml
+++ b/app/src/main/res/layout/activity_gallery_max.xml
@@ -2,7 +2,7 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.skh.reviewme.Main.Photos.GalleryMaxActivity"
+    tools:context="com.skh.reviewme.Review.Photos.GalleryMaxActivity"
     >
 
     <android.support.constraint.ConstraintLayout
