--- a/app/src/main/res/layout/fragment_review_main.xml
+++ b/app/src/main/res/layout/fragment_review_main.xml
@@ -46,7 +46,7 @@
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/horizontal_title"
+                    android:background="@color/titleColor"
 
                     >
 
