--- a/app/src/main/res/layout/fragment_setting_main.xml
+++ b/app/src/main/res/layout/fragment_setting_main.xml
@@ -15,10 +15,10 @@
 
         <variable
             name="item"
-            type="com.skh.reviewme.Setting.Model.SettingUserProfileModel"/>
+            type="com.skh.reviewme.Setting.Model.SettingUserProfileModel"
+            />
 
     </data>
-
 
 
     <android.support.constraint.ConstraintLayout
@@ -26,59 +26,51 @@
         android:layout_height="match_parent"
         >
 
+        <TextView
+            android:id="@+id/setting_view_titlebar"
+            style="@style/titlebarNoText"
+            android:text="정보"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <View
+            android:id="@+id/view_above_profileChange"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toTopOf="@id/setting_btn_changeimage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/setting_view_titlebar"
+            />
+
         <ImageView
             android:id="@+id/setting_img"
+            settingImageUrl="@{item.UserProfile}"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginTop="35dp"
-            settingImageUrl="@{item.UserProfile}"
-            android:background="@drawable/btn_grey_circle_border"
             android:layout_marginStart="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-
-            />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/setting_btn_changeimage"
             android:layout_marginTop="25dp"
+            android:background="@drawable/btn_grey_circle_border"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:text="프로필 사진 변경"
-            android:onClick="@{onClickListener::onClick}"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:background="@drawable/btn_grey_rec"
-            app:layout_constraintTop_toBottomOf="@id/setting_img"
+            app:layout_constraintTop_toBottomOf="@id/setting_view_titlebar"
+
             />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/setting_btn_errors"
-            android:layout_marginTop="15dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:text="오류 문의"
-            android:onClick="@{onClickListener::onClick}"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:background="@drawable/btn_grey_rec"
-            app:layout_constraintTop_toBottomOf="@id/setting_btn_changeimage"
-            />
 
         <TextView
             android:id="@+id/setting_name_txt"
             android:layout_width="0dp"
             android:layout_height="30dp"
-            android:text="@{item.UserNick}"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
             android:gravity="center_vertical"
+            android:text="@{item.UserNick}"
             android:textColor="#000"
             android:textSize="15sp"
+
             app:layout_constraintBottom_toTopOf="@id/setting_gender_txt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/setting_img"
@@ -91,9 +83,9 @@
         <View
             android:layout_width="0dp"
             android:layout_height="0.5dp"
-            android:background="@color/darkGrey"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
+            android:background="@color/darkGrey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/setting_img"
             app:layout_constraintTop_toBottomOf="@id/setting_name_txt"
@@ -103,25 +95,25 @@
             android:id="@+id/setting_gender_txt"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            app:checkGender="@{item.UserGender}"
             android:layout_marginEnd="20dp"
-            android:textSize="13sp"
             android:layout_marginStart="20dp"
             android:gravity="center_vertical"
+            android:textColor="#000"
+            android:textSize="13sp"
+            app:checkGender="@{item.UserGender}"
             app:layout_constraintBottom_toTopOf="@id/setting_age_txt"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/setting_img"
             app:layout_constraintTop_toBottomOf="@id/setting_name_txt"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="#000"
             tools:text="M"
             />
 
         <View
             android:layout_width="0dp"
             android:layout_height="0.5dp"
-            android:background="@color/darkGrey"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
+            android:background="@color/darkGrey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/setting_img"
             app:layout_constraintTop_toBottomOf="@id/setting_gender_txt"
@@ -132,24 +124,24 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginEnd="20dp"
-            android:textSize="13sp"
-            android:text="@{item.UserAge}"
             android:layout_marginStart="20dp"
             android:gravity="center_vertical"
+            android:text="@{item.UserAge}"
+            android:textColor="#000"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toTopOf="@id/setting_email_txt"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/setting_img"
             app:layout_constraintTop_toBottomOf="@id/setting_gender_txt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/setting_email_txt"
-            android:textColor="#000"
             tools:text="23"
             />
 
         <View
             android:layout_width="0dp"
             android:layout_height="0.5dp"
-            android:background="@color/darkGrey"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
+            android:background="@color/darkGrey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/setting_img"
             app:layout_constraintTop_toBottomOf="@id/setting_age_txt"
@@ -161,42 +153,106 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginEnd="20dp"
-            android:textSize="13sp"
-            android:text="@{item.UserEmail}"
             android:layout_marginStart="20dp"
             android:gravity="center_vertical"
+            android:text="@{item.UserEmail}"
+            android:textColor="#000"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toTopOf="@id/setting_img"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/setting_img"
             app:layout_constraintTop_toBottomOf="@id/setting_age_txt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/setting_img"
-            android:textColor="#000"
             tools:text="seogkihong333ffwer@gmail.com"
             />
 
         <View
             android:layout_width="0dp"
             android:layout_height="0.5dp"
-            android:background="@color/darkGrey"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
+            android:background="@color/darkGrey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/setting_img"
             app:layout_constraintTop_toBottomOf="@id/setting_email_txt"
             />
 
         <Button
+            android:id="@+id/setting_btn_changeimage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0.3dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/btn_grey_rec"
+            android:elevation="0dp"
+            android:gravity="center_vertical"
+            android:onClick="@{onClickListener::onClick}"
+            android:paddingStart="15dp"
+            android:text="프로필 사진 변경"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@id/setting_btn_notification"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/setting_img"
+            />
+
+
+        <Button
+            android:id="@+id/setting_btn_notification"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0.3dp"
+            android:background="@drawable/btn_grey_rec"
+            android:elevation="0dp"
+            android:gravity="center_vertical"
+            android:onClick="@{onClickListener::onClick}"
+            android:paddingStart="15dp"
+            android:text="공지사항"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@id/setting_btn_errors"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/setting_btn_changeimage"
+            />
+
+        <Button
+            android:id="@+id/setting_btn_errors"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0.3dp"
+            android:background="@drawable/btn_grey_rec"
+            android:elevation="0dp"
+            android:gravity="center_vertical"
+            android:onClick="@{onClickListener::onClick}"
+            android:paddingStart="15dp"
+            android:text="문의 하기"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@id/setting_btn_out"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/setting_btn_notification"
+            />
+
+
+
+        <Button
             android:id="@+id/setting_btn_out"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="로그아웃"
-            android:textColor="@color/black"
-            android:textSize="15sp"
+            android:layout_marginBottom="7.6dp"
             android:background="@drawable/btn_grey_rec"
+            android:elevation="0dp"
+            android:gravity="center_vertical"
             android:onClick="@{onClickListener::onClick}"
-            app:layout_constraintStart_toStartOf="parent"
+            android:paddingStart="15dp"
+            android:text="로그아웃"
+            android:textColor="@color/titleReverse"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
-
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/setting_btn_errors"
             />
 
     </android.support.constraint.ConstraintLayout>
