--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     <style name="CustomAppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <!--<item name="colorPrimary">@color/colorPrimary</item>-->
-        <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+        <item name="colorPrimaryDark">#548BB3</item>
         <!--<item name="colorAccent">@color/colorAccent</item>-->
         <!--<item name="colorPrimary">@color/colorPrimary</item>-->
         <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
@@ -43,16 +43,6 @@
         <item name="colorControlActivated">@color/black</item>
     </style>
 
-    <!--<style name="ButtonRippleStyle" parent="Material.Drawable.Ripple.Wave.Light">-->
-        <!--<item name="android:background">@null</item>-->
-        <!--<item name="rd_rippleType">touch</item>-->
-        <!--<item name="rd_maxRippleRadius">25dp</item>-->
-        <!--<item name="rd_cornerRadius">5dp</item>-->
-        <!--<item name="rd_delayClick">untilRelease</item>-->
-        <!--<item name="rd_rippleAnimDuration">150</item>-->
-        <!--<item name="rd_rippleColor">@color/DarkGreenalpha</item>-->
-    <!--</style>-->
-
     <style name="pictureTitlebar">
 
         <item name="android:textColor">@color/white</item>
@@ -61,7 +51,7 @@
         <item name="android:layout_height">60dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:gravity">center</item>
-        <item name="android:background">@drawable/horizontal_title</item>
+        <item name="android:background">@color/titleColor</item>
         <item name="android:text">사진을 정해주세요</item>
     </style>
 
@@ -72,7 +62,7 @@
         <item name="android:layout_height">60dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:gravity">center</item>
-        <item name="android:background">@drawable/horizontal_title</item>
+        <item name="android:background">@color/titleColor</item>
     </style>
 
 </resources>
